adiciona os elementos do html a uma seçao e adiciona as contas de inicio e fim do terço

--- a/pages/prayer.html
+++ b/pages/prayer.html
@@ -8,94 +8,96 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Terço</h1>
-    <div>
-        <ul>
-            <li><div class="contaMaior"></div></li>
-            <li><div class="cont"></div></li>
-            <li><div class="cont"></div></li>
-            <li><div class="cont"></div></li>
-        </ul>
-    </div>
+    <section>
+        <h1>Terço</h1>
+            <div>
+                <ul>
+                    <li><div class="contaMaior"></div></li>
+                    <li><div class="cont"></div></li>
+                    <li><div class="cont"></div></li>
+                    <li><div class="cont"></div></li>
+                </ul>
+            </div>
 
-    <p>primeira dezena</p>
-    <!-- <ul>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>
-       <li>
-        <div class="cont"></div>
-       </li>       
-    </ul>
+            <!-- <p>primeira dezena</p> -->
+            <!-- <ul>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>
+            <li>
+                <div class="cont"></div>
+            </li>       
+            </ul>
 
-    <div class="misterio">
-        <div class="contaMaior"></div>
-        <div class="misterio"><p class="textoMisterio"></p></div>
-    </div>
+            <div class="misterio">
+                <div class="contaMaior"></div>
+                <div class="misterio"><p class="textoMisterio"></p></div>
+            </div>
 
-    <ul>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>
-        <li>
-         <div class="cont"></div>
-        </li>       
-     </ul>
+            <ul>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>
+                <li>
+                <div class="cont"></div>
+                </li>       
+            </ul>
 
-     <p>terceira</p> -->
-     <div class="contas">
+            <p>terceira</p> -->
+            <div class="contas">
 
-     </div>
+            </div>
 
-     <div class="contaMaior"></div>
-     
+            <div class="contaMaior"></div>
+    
+    </section> 
 </body>
 </html>
